tests/invalid/Public_Invalid_12.whiley
type Hidden is (int x) where x >= 5

public property f({Hidden[] field} x) -> (bool r):
    x == x

